# Emenu

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: cicd.yaml
results/: classification_results.txt  classification_results2.txt  metadata_results.txt  metadata_results_.txt  metadata_results_llama3.txt  test_classification_results_12_06_2025.txt  test_dataset_pdf_test_classification_qwen3_4b_promt_1.txt  test_dataset_pdf_test_classification_qwen3_4b_promt_2.txt  test_dataset_pdf_test_classification_qwen3_4b_promt_3.txt  test_dataset_pdf_test_classification_qwen3_4b_promt_4.txt  test_dataset_pdf_test_classification_qwen3_4b_promt_5.txt  test_dataset_pdf_test_number_data_qwen3_4b_promt_1.txt  test_dataset_pdf_test_number_data_qwen3_4b_promt_2.txt  test_dataset_pdf_test_number_data_qwen3_4b_promt_3.txt  test_dataset_pdf_test_parties_qwen3_4b_promt_1.txt  test_dataset_pdf_test_parties_qwen3_4b_promt_2.txt  Акты_1я_страница.txt  Договоры_1я_страница.txt  Счет-фактуры_1я_страница.txt  Счета_1я_страница.txt  Тест_извлечения_атрибутов_Номер_Дата_llama3.txt  Тест_извлечения_атрибутов_Номер_Дата_qwen3_8b.txt  Тест_извлечения_атрибутов_итог.txt  Тест_классификации.txt  Тест_классификации_deepseek-r1_7b.txt  Тест_классификации_deepseek-v3.txt  Тест_классификации_llama3.txt  Тест_классификации_mistral.txt  Тест_классификации_qwen3_8b.txt  итог_номер_дата.txt  номер_дата_контрагенты_results_.txt  номера_договоров.txt  номера_документов_llm.txt
src/: config.py  logger_config.py
templates/: chat.html  index.html
(+10 files in other folders)
