[project]
name = "document-classification"
version = "0.1.0"
description = "Document classification and OCR, LLM system"
authors = [
    {name = "Aleksandr Blishch",email = "alnibl88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "easyocr (==1.7.2)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "notebook (>=7.1.3,<8.0.0)",
    "ipykernel (>=6.29.3,<7.0.0)",
    "papermill (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
